# SmartCalc_v1.0

./: README.md
src/: Doxygen  Makefile  s21_calc.c  s21_calc.h  s21_credit.c  s21_credit.h  s21_deposit.c  test_main.c
src/calc/: CMakeLists.txt  calc.cpp  calc.h  calc.ui
src/html/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  menudata.js  s21__calc_8c.html  s21__calc_8h.html  s21__calc_8h_source.html  s21__credit_8c.html  s21__credit_8h.html  s21__credit_8h_source.html  s21__deposit_8c.html  structcredit-members.html  structcredit.html  structstack__struct-members.html  structstack__struct.html  test__main_8c.html
src/html/search/: all_0.js  all_1.js  all_2.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  enumvalues_c.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
src/latex/: annotated.tex  files.tex  refman.tex  s21__calc_8c.tex  s21__calc_8h.tex  s21__calc_8h_source.tex  s21__credit_8c.tex  s21__credit_8h.tex  s21__credit_8h_source.tex  s21__deposit_8c.tex  structcredit.tex  structstack__struct.tex  test__main_8c.tex
src/report/: index-sort-f.html  index-sort-l.html  index.html
src/report/src/: index-sort-f.html  index-sort-l.html  index.html  s21_calc.c.func-sort-c.html  s21_calc.c.func.html  s21_calc.c.gcov.html  s21_credit.c.func-sort-c.html  s21_credit.c.func.html  s21_credit.c.gcov.html
src/tests/: credit_calc_test.c  postfix_notation_test.c  unit.h
